--- a/dmarket.bib
+++ b/dmarket.bib
@@ -4,6 +4,28 @@
 
 %% Created for Nikete at 2016-08-18 10:58:21 +0200 
 
+@article{geanakoplos1982we,
+  title={We can't disagree forever},
+  author={Geanakoplos, John D and Polemarchakis, Heraklis M},
+  journal={Journal of Economic Theory},
+  volume={28},
+  number={1},
+  pages={192--200},
+  year={1982},
+  publisher={Elsevier}
+}
+
+
+@article{ostrovsky2012information,
+  title={Information aggregation in dynamic markets with strategic traders},
+  author={Ostrovsky, Michael},
+  journal={Econometrica},
+  volume={80},
+  number={6},
+  pages={2595--2647},
+  year={2012},
+  publisher={Wiley Online Library}
+}
 
 %% Saved with string encoding Unicode (UTF-8) 
 @inproceedings{frongillo2015convergence,
