adding background ref

--- a/dmarket.bib
+++ b/dmarket.bib
@@ -4,6 +4,44 @@
 
 %% Created for Nikete at 2016-08-18 10:58:21 +0200 
 
+@article{erikson2008political,
+  title={Are political markets really superior to polls as election predictors?},
+  author={Erikson, Robert S and Wlezien, Christopher},
+  journal={Public Opinion Quarterly},
+  volume={72},
+  number={2},
+  pages={190--215},
+  year={2008},
+  publisher={AAPOR}
+}
+
+@article{berg2008results,
+  title={Results from a dozen years of election futures markets research},
+  author={Berg, Joyce and Forsythe, Robert and Nelson, Forrest and Rietz, Thomas},
+  journal={Handbook of experimental economics results},
+  volume={1},
+  pages={742--751},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{mckelvey1990public,
+  title={Public and private information: An experimental study of information pooling},
+  author={McKelvey, Richard D and Page, Talbot},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={1321--1339},
+  year={1990},
+  publisher={JSTOR}
+}
+@article{mckelvey1986common,
+  title={Common knowledge, consensus, and aggregate information},
+  author={McKelvey, Richard D and Page, Talbot},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={109--127},
+  year={1986},
+  publisher={JSTOR}
+}
+
 @article{geanakoplos1982we,
   title={We can't disagree forever},
   author={Geanakoplos, John D and Polemarchakis, Heraklis M},
